--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-image-zoom": "^1.3.1",
     "react-material-ui-carousel": "^2.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-social-login-buttons": "^3.4.0",
+    "react-tabs": "^3.2.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
