--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_ID= 494585981737319
 REACT_APP_CLIENT_ID= 188264738493-fi6mp5aj73po4ugl47kcsg5eurbkmuf2.apps.googleusercontent.com
+REACT_APP_URL = https://neostore-api.herokuapp.com
