--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-pay/button-react": "^2.4.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
@@ -17,11 +18,14 @@
     "react-google-login": "^5.2.2",
     "react-image-zoom": "^1.3.1",
     "react-material-ui-carousel": "^2.2.6",
+    "react-push-notification": "^1.3.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "react-social-login-buttons": "^3.4.0",
     "react-tabs": "^3.2.2",
+    "redux": "^4.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
